objects/AcctSeed__Recurring_Billing_Line__c.object
<CustomObject>
    <description>Defines the line level detail of a recurring billing. Aggregation of recurring billing lines constitute a recurring billing.</description>
    <fields>
        <fullName>AcctSeed__Comment__c</fullName>
        <inlineHelpText>Comment for display on Recurring Billing Line.</inlineHelpText>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Amount__c</fullName>
        <formula>IF(AcctSeed__List_Price__c = 0, 0, AcctSeed__List_Price__c - AcctSeed__Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List Price - Unit Price</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <formula>IF(AcctSeed__List_Price__c = 0, 0, AcctSeed__Discount_Amount__c / AcctSeed__List_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount Amount/List Price</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__List_Price__c</fullName>
        <inlineHelpText>Suggested price before discount.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity_Product_Id__c</fullName>
        <inlineHelpText>The Id of the opportunity product this recurring billing line was sourced.</inlineHelpText>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Rate__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Billing__c</fullName>
        <label>Recurring Billing</label>
        <referenceTo>AcctSeed__Recurring_Billing__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Quantity__c * AcctSeed__Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity x Unit Price for the Recurring Billing Line</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated based on Sub-Total x Tax Group&apos;s Combined Tax Rate on Recurring Billing Line, unless using AvaTax.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If using native tax functionality, this determines the Combined Tax Rate percentage and the tax GL mappings and is used to calculate the Tax Amount</inlineHelpText>
        <label>Tax Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales and Purchase</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
        <relationshipLabel>Recurring Billing Lines</relationshipLabel>
        <relationshipName>Recurring_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <formula>IF(AcctSeed__Sub_Total__c = 0, 0 ,AcctSeed__Tax_Amount__c / AcctSeed__Sub_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax rate percentage used to calculate tax amount.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <formula>AcctSeed__Sub_Total__c + AcctSeed__Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Category__c</fullName>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tax_Category</valueSetName>
        </valueSet>
    </fields>
    <label>Recurring Billing Line</label>
    <nameField>
        <displayFormat>RBL-{00000}</displayFormat>
        <label>Recurring Billing Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Billing Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Project_Must_Be_Associated_With_Customer</fullName>
        <active>false</active>
        <errorConditionFormula>!ISBLANK(AcctSeed__Project__c) &amp;&amp; AcctSeed__Project__r.AcctSeed__Account__c != AcctSeed__Recurring_Billing__r.AcctSeed__Customer__c</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project__c</errorDisplayField>
        <errorMessage>The project you have selected is not associated with the customer listed in the billing header. The account (customer) field on this project must be the same as the customer on the billing header.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>!ISBLANK(AcctSeed__Project__c) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
</CustomObject>